Lab 3 done.